add_subdirectory(vector)
add_subdirectory(list)
add_subdirectory(stack)
add_subdirectory(min-stack)
add_subdirectory(array)
add_subdirectory(simple-deque)
add_subdirectory(queue)
add_subdirectory(circular-buffer)
add_subdirectory(deque)
add_subdirectory(tree)
add_subdirectory(heap)
add_subdirectory(priority-queue)
add_subdirectory(graph)